--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
     "firebase": "^9.17.1",
