--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-    "trailingComma": "none",
-    "tabWidth": 4
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
 }
