--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.7.1",
     "timers-browserify": "^2.0.12",
     "vue": "^2.6.14",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "xml2js": "^0.6.2"
